--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
 
+    <string name="led">LED</string>
+    <string name="balcony">Балкон</string>
+    <string name="none">none</string>
     <!-- Navigation bar titles -->
     <string name="tab_1">Главная</string>
     <string name="tab_2">Счетчики</string>
@@ -54,6 +57,10 @@
     <string name="settings_hall_wall">Бра на стене</string>
     <string name="settings_hall_sofa">Бра за диваном</string>
     <string name="settings_kitchen_table">Над столом</string>
+    <string name="settings_corridor_bad">у спальни</string>
+    <string name="settings_corridor_children">у детской</string>
+    <string name="settings_corridor_entrance">у прихожей</string>
+    <string name="settings_corridor_hall">у гостиной</string>
     <string name="settings_warm_floor">Теплый пол</string>
     <string name="settings_meters_hot_water">Горячая вода</string>
     <string name="settings_meters_cold_water">Холодная вода</string>
